Change hero background to Mununuri Wemhuri

--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ section.active {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url('images/plight_of_man.png') center/cover;
+    background: url('images/mununuri_wemhuri.jpeg') center/cover;
     background-attachment: scroll;
     text-align: center;
     padding: 2rem;
